force-app/main/default/objects/Account/fields/EmailPersonAccount__c.field-meta.xml
<CustomField>
    <fullName>EmailPersonAccount__c</fullName>
    <description>Campo formula para exibir mensagem na visão 360 caso o campo Email esteja vazio.</description>
    <formula>null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>E-mail Principal</label>
    <type>Text</type>
</CustomField>