force-app/main/default/objects/Account/fields/FirstMobileActivationDate__c.field-meta.xml
<CustomField>
    <fullName>FirstMobileActivationDate__c</fullName>
    <description>Campo que armazena a data mais antiga de um Asset de Móvel, utilizado para o calculo do Aging de Cliente.</description>
    <label>Data Ativação Móvel</label>
    <type>Date</type>
</CustomField>