force-app/main/default/objects/Account/fields/FixedLineAmount__c.field-meta.xml
<CustomField>
    <fullName>FixedLineAmount__c</fullName>
    <label>Total Voz</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>