force-app/main/default/objects/Account/fields/FixedLineOthers__c.field-meta.xml
<CustomField>
    <fullName>FixedLineOthers__c</fullName>
    <description>Valor de Outros do ativo/produto de Voz utilizado no componente customizado de ofertas</description>
    <label>Voz Outros</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>