force-app/main/default/objects/Account/fields/FixedLineOvercharging__c.field-meta.xml
<CustomField>
    <fullName>FixedLineOvercharging__c</fullName>
    <description>Valor de Excedente do ativo/produto de Voz utilizado no componente customizado de ofertas</description>
    <label>Voz Excedente</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>