force-app/main/default/objects/Account/fields/FixedLineRecurrence__c.field-meta.xml
<CustomField>
    <fullName>FixedLineRecurrence__c</fullName>
    <description>Valor de Assinatura do ativo/produto de Voz utilizado no componente customizado de ofertas</description>
    <label>Voz Assinatura</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>