force-app/main/default/objects/Account/fields/FullAddress__c.field-meta.xml
<CustomField>
    <fullName>FullAddress__c</fullName>
    <formula>IF(RecordType.DeveloperName = &quot;Billing&quot;,    BillingAddressType__c  + &apos;,&apos; + BillingStreet + &apos;,&apos; + BillingNumber__c + &apos;,&apos; + BillingNeighborhood__c + &apos;,&apos; + BillingPostalCode + &apos;,&apos; + BillingCity + &apos;,&apos; + BillingState, ShippingAddressType__c  + &apos;,&apos; + ShippingStreet + &apos;,&apos; + ShippingNumber__c + &apos;,&apos; + ShippingNeighborhood__c + &apos;,&apos; + ShippingPostalCode + &apos;,&apos; + ShippingCity + &apos;,&apos; + ShippingState)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Endereço Completo</label>
    <type>Text</type>
</CustomField>