force-app/main/default/objects/Account/fields/FullComplement__c.field-meta.xml
<CustomField>
    <fullName>FullComplement__c</fullName>
    <formula>IF(RecordType.DeveloperName = "Billing", IF( AND(OR(ISNULL( BillingComplement1__c ), ISBLANK( BillingComplement1__c )) ,OR(ISNULL( BillingComplement2__c ), ISBLANK( BillingComplement2__c )),OR(ISNULL( BillingComplement3__c ), ISBLANK( BillingComplement3__c ))) , 'Sem Complemento',  BillingComplement1__c  &amp; " " &amp; BillingComplement2__c  &amp; " " &amp;  BillingComplement3__c )

,IF( AND(OR(ISNULL(  ShippingComplement1__c  ), ISBLANK(  ShippingComplement1__c  )) ,OR(ISNULL(  ShippingComplement2__c  ), ISBLANK(  ShippingComplement2__c  )),OR(ISNULL(  ShippingComplement3__c  ), ISBLANK(  ShippingComplement3__c  ))) , 'Sem Complemento',   ShippingComplement1__c   &amp; " " &amp;  ShippingComplement2__c   &amp; " " &amp;   ShippingComplement3__c  ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Complemento</label>
    <type>Text</type>
</CustomField>