force-app/main/default/objects/Account/fields/HDELastUpdateDate__c.field-meta.xml
<CustomField>
    <fullName>HDELastUpdateDate__c</fullName>
    <description>Data da última vez que a carga do HDE atualizou o registro. Para uso do cálculo de cliente sem contato.</description>
    <label>Data da Última Atualização do HDE</label>
    <type>Date</type>
</CustomField>