force-app/main/default/objects/Account/fields/HDENoContact__c.field-meta.xml
<CustomField>
    <fullName>HDENoContact__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Siga o atendimento conforme solicitação do cliente, em seguida avaliar se o cliente ficou ciente da tratativa do ultimo HDE, que foi fechado sem contato, se possível realize esclarecimentos, se houver novo pedido e não consiga solucionar, abra o HDE se esse processo for do seu escopo.</inlineHelpText>
    <label>HDE fechado sem contato</label>
    <type>Checkbox</type>
</CustomField>