force-app/main/default/objects/Account/fields/HighTemperature__c.field-meta.xml
<CustomField>
    <fullName>HighTemperature__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Atenção - Cliente em outro contato com a empresa se mostrou com temperatura elevada. Entenda o pedido atual e verifique se tem relação com outro contato, atue sobre a causa raiz, se necessário e sendo do seu escopo, abra o HDE</inlineHelpText>
    <label>Temperatura Alta</label>
    <type>Checkbox</type>
</CustomField>