force-app/main/default/objects/Account/fields/IsDigitalAccount__c.field-meta.xml
<CustomField>
    <fullName>IsDigitalAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Conta Digital</label>
    <type>Checkbox</type>
</CustomField>