force-app/main/default/objects/Account/fields/LastBureauValidation__c.field-meta.xml
<CustomField>
    <fullName>LastBureauValidation__c</fullName>
    <label>LastBureauValidation</label>
    <type>DateTime</type>
</CustomField>