force-app/main/default/objects/Account/fields/LegacyAccountId__c.field-meta.xml
<CustomField>
    <fullName>LegacyAccountId__c</fullName>
    <externalId>true</externalId>
    <label>Id Conta Legado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>