force-app/main/default/objects/Account/fields/LegalEntity__c.field-meta.xml
<CustomField>
    <fullName>LegalEntity__c</fullName>
    <description>Este campo serve para indicarmos se a conta é relativa a uma pessoa física ou uma pessoa jurídica.</description>
    <label>Tipo de Pessoa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Física</fullName>
            </value>
            <value>
                <fullName>Jurídica</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>