force-app/main/default/objects/Account/fields/LGPDPhrase__c.field-meta.xml
<CustomField>
    <fullName>LGPDPhrase__c</fullName>
    <label>Frase de consentimento para uso de dados</label>
    <length>100</length>
    <type>Text</type>
</CustomField>