force-app/main/default/objects/Account/fields/NCC__c.field-meta.xml
<CustomField>
    <fullName>NCC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NCC</label>
    <type>Checkbox</type>
</CustomField>