force-app/main/default/objects/Account/fields/ODC__c.field-meta.xml
<CustomField>
    <fullName>ODC__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Atenção - Cliente possui ou possuiu ações em orgãos de proteção a nsumidor como: Ouvidoria, Anatel, Procon... Atenda a solicitação do cliente e atue para solucionar a causa raiz evitando novas reclamações, caso não solucione, e sendo do seu escopo, abra o HDE.</inlineHelpText>
    <label>Crítico Orgãos Proteção Consumidor</label>
    <type>Checkbox</type>
</CustomField>