force-app/main/default/objects/Account/fields/OfferReferenceValue__c.field-meta.xml
<CustomField>
    <fullName>OfferReferenceValue__c</fullName>
    <description>Valor utilizado no cálculo das ofertas</description>
    <formula>TVRecurrence__c + BroadbandRecurrence__c + FixedLineRecurrence__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor Referência Oferta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>