force-app/main/default/objects/Account/fields/OpenTicketBD__c.field-meta.xml
<CustomField>
    <fullName>OpenTicketBD__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Atenção - Cliente possui Defeito Técnico em andamento, verifique se o motivo da chamada está relacionada ao tema, caso não esteja, ao final da ligação pergunte se o cliente tem alguma dúvida sobre o defeito técnico em andamento e realize as recomendações de acompanhamento do defeito através do app Meu Vivo Fixo. Caso haja reclamação do cliente sobre o BD e não consiga solucionar, abra o HDE se esse processo for do seu escopo.</inlineHelpText>
    <label>BD Aberto</label>
    <type>Checkbox</type>
</CustomField>