force-app/main/default/objects/Account/fields/PaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>PaymentMethod__c</fullName>
    <label>Meio de Pagamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cartão de Crédito</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>