force-app/main/default/objects/Account/fields/Recaller__c.field-meta.xml
<CustomField>
    <fullName>Recaller__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Atenção – Cliente Rechamador. Identifique a causa raiz da rechamada e dentro dos processos e alçadas verifique a possibilidade de corrigir o problema,  acione o supervisor para identificar mais alguma oportunidade de solução, em caso de impossibilidade de corrigir a causa raiz, e sendo do seu escopo, abra o HDE</inlineHelpText>
    <label>Rechamador</label>
    <type>Checkbox</type>
</CustomField>