force-app/main/default/objects/Account/fields/Reincident__c.field-meta.xml
<CustomField>
    <fullName>Reincident__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Siga o atendimento conforme solicitação do cliente, em seguida avaliar qual a causa raiz que tem gerado contestações de fatura  reincidentes, realizar correção, caso não consiga solucionar no atendimento, e sendo do seu escopo, abra o HDE.</inlineHelpText>
    <label>Reincidente Contestação</label>
    <type>Checkbox</type>
</CustomField>