force-app/main/default/objects/Account/fields/Remarks__c.field-meta.xml
<CustomField>
    <fullName>Remarks__c</fullName>
    <label>Comentários</label>
    <type>TextArea</type>
</CustomField>