force-app/main/default/objects/Account/fields/RequestedFirstName__c.field-meta.xml
<CustomField>
    <fullName>RequestedFirstName__c</fullName>
    <description>Nome solicitado para o processo de aprovação via alçada.</description>
    <label>Nome Solicitado</label>
    <length>40</length>
    <type>Text</type>
</CustomField>