force-app/main/default/objects/Account/fields/RequestedLastName__c.field-meta.xml
<CustomField>
    <fullName>RequestedLastName__c</fullName>
    <description>Sobrenome solicitado para o processo de aprovação via alçada.</description>
    <label>Sobrenome Solicitado</label>
    <length>40</length>
    <type>Text</type>
</CustomField>