force-app/main/default/objects/Account/fields/SAPECCId__c.field-meta.xml
<CustomField>
    <fullName>SAPECCId__c</fullName>
    <description>Id do cliente dentro do SAPECC</description>
    <externalId>true</externalId>
    <label>ID SAPECC</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>