force-app/main/default/objects/Account/fields/ShippingCNL__c.field-meta.xml
<CustomField>
    <fullName>ShippingCNL__c</fullName>
    <label>CNL</label>
    <length>100</length>
    <type>Text</type>
</CustomField>