force-app/main/default/objects/Account/fields/ShippingComplement2__c.field-meta.xml
<CustomField>
    <fullName>ShippingComplement2__c</fullName>
    <description>Complemento</description>
    <label>Complemento 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>