force-app/main/default/objects/Account/fields/ShippingComplementType1__c.field-meta.xml
<CustomField>
    <fullName>ShippingComplementType1__c</fullName>
    <description>Tipo de complemento</description>
    <label>Tipo Complemento 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ComplementType</valueSetName>
    </valueSet>
</CustomField>