force-app/main/default/objects/Account/fields/ShippingIBGECode__c.field-meta.xml
<CustomField>
    <fullName>ShippingIBGECode__c</fullName>
    <description>Código IBGE do endereço de correspondência</description>
    <label>Código IBGE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>