force-app/main/default/objects/Account/fields/ShippingNumber__c.field-meta.xml
<CustomField>
    <fullName>ShippingNumber__c</fullName>
    <description>Número do endereço de correspondência</description>
    <label>Número</label>
    <length>255</length>
    <type>Text</type>
</CustomField>