force-app/main/default/objects/Account/fields/ShippingSREAddressId__c.field-meta.xml
<CustomField>
    <fullName>ShippingSREAddressId__c</fullName>
    <label>Id do Endereço</label>
    <length>255</length>
    <type>Text</type>
</CustomField>