force-app/main/default/objects/Account/fields/SpecialTreatment__c.field-meta.xml
<CustomField>
    <fullName>SpecialTreatment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicação se o cliente necessita de atendimento especial.</description>
    <label>Atendimento Especializado</label>
    <type>Checkbox</type>
</CustomField>