force-app/main/default/objects/Account/fields/SubmitterComments__c.field-meta.xml
<CustomField>
    <fullName>SubmitterComments__c</fullName>
    <label>Submitter Comments</label>
    <type>TextArea</type>
</CustomField>