force-app/main/default/objects/Account/fields/SupportClassification__c.field-meta.xml
<CustomField>
    <fullName>SupportClassification__c</fullName>
    <label>Classificação no Atendimento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SupportClassification</valueSetName>
    </valueSet>
</CustomField>