force-app/main/default/objects/Account/fields/Tale__c.field-meta.xml
<CustomField>
    <fullName>Tale__c</fullName>
    <formula>IF($User.UIThemeDisplayed &lt;&gt; &apos;Theme4t&apos;,
CASE(TEXT(CustomerSegment__c),
&apos;GOLD&apos;, IMAGE(&apos;/resource/Gold&apos;, &quot;low&quot;),
&apos;PLATINUM&apos;, IMAGE(&apos;/resource/Platinum&apos;, &quot;low&quot;),
&apos;PURPURA&apos;, IMAGE(&apos;/resource/Purple&apos;, &quot;low&quot;),
&apos;SILVER&apos;, IMAGE(&apos;/resource/Silver&apos;, &quot;low&quot;),
IMAGE(&apos;/resource/VSegment&apos;, &quot;low&quot;)
),
CASE(TEXT(CustomerSegment__c),
&apos;GOLD&apos;, IMAGE(&apos;/resource/GoldMobile&apos;, &quot;low&quot;),
&apos;PLATINUM&apos;, IMAGE(&apos;/resource/PlatinumMobile&apos;, &quot;low&quot;),
&apos;PURPURA&apos;, IMAGE(&apos;/resource/PurpleMobile&apos;, &quot;low&quot;),
&apos;SILVER&apos;, IMAGE(&apos;/resource/SilverMobile&apos;, &quot;low&quot;),
IMAGE(&apos;/resource/VSegmentMobile&apos;, &quot;low&quot;)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tale</label>
    <type>Text</type>
</CustomField>