force-app/main/default/objects/Account/fields/TDNA__c.field-meta.xml
<CustomField>
    <fullName>TDNA__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Siga o atendimento conforme solicitação do cliente, antes de finalizar a chamada use a seguinte fraseologia, ou algo próximo desse direcionamento - &quot;Identificamos que foi enviado uma pesquisa por e-mail, pra avaliar o nosso atendimento, e sua avaliação não foi satisfatória, posso lhe ajudar com o tema que envolvia essa questão?&quot;. Peça desculpas pelo que aconteceu, apresente solução para a causa raiz, e se necessário e sendo do seu escopo, abra o HDE</inlineHelpText>
    <label>TDNA</label>
    <type>Checkbox</type>
</CustomField>