force-app/main/default/objects/Account/fields/TicketBDReincident__c.field-meta.xml
<CustomField>
    <fullName>TicketBDReincident__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Atenção - Cliente já passou por cenários de defeito técnico mais de uma vez recentemente, caso a ligação não tenha relação com o tema, pergunte se está tudo ok sobre os serviços. Caso o atendimento esteja relacionado ou haja reclamação do cliente de problemas técnicos, abra o HDE se esse processo for do seu escopo e informe ao cliente que o caso será acompanhado.</inlineHelpText>
    <label>BD Reincidente</label>
    <type>Checkbox</type>
</CustomField>