force-app/main/default/objects/Account/fields/TimeAsClient__c.field-meta.xml
<CustomField>
    <fullName>TimeAsClient__c</fullName>
    <description>Aging do cliente em anos e meses.</description>
    <formula>IF(
AgingCliente__c = 0, '0 Mês',



IF(
AgingCliente__c = 12, '1 Ano',



IF(
AND(
AgingCliente__c/12 > 1,
MOD(AgingCliente__c,12) = 0), TEXT(FLOOR(AgingCliente__c/12)) &amp; ' Anos',



IF(
AgingCliente__c = 1, '1 Mês',



IF(
AND(
AgingCliente__c > 1,
AgingCliente__c &lt;= 11), TEXT(AgingCliente__c) &amp; ' Meses',



IF(
AND(
AgingCliente__c >= 13,
AgingCliente__c &lt;= 23,
MOD(AgingCliente__c,12) = 1),
TEXT(FLOOR(AgingCliente__c/12)) &amp; ' Ano e 1 Mês',



IF(
AND(
AgingCliente__c >= 13,
AgingCliente__c &lt;= 23,
MOD(AgingCliente__c,12) > 1),
TEXT(FLOOR(AgingCliente__c/12)) &amp; ' Ano e ' &amp; TEXT(AgingCliente__c-12) &amp; ' Meses',



IF(
AND(
AgingCliente__c >= 24,
MOD(AgingCliente__c,12) = 1), TEXT(FLOOR(AgingCliente__c/12)) &amp; ' Anos e 1 Mês',



IF(
AND(
AgingCliente__c >= 24,
MOD(AgingCliente__c,12) > 1), TEXT(FLOOR(AgingCliente__c/12)) &amp; ' Anos e ' &amp; TEXT(MOD(AgingCliente__c,12)) &amp; ' Meses', ''



)))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Data do Cliente da Última Ativação para Fixa</inlineHelpText>
    <label>Tempo como Cliente Fixa</label>
    <type>Text</type>
</CustomField>