force-app/main/default/objects/Account/fields/TotalAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalAmount__c</fullName>
    <description>Valor total da última fatura</description>
    <label>Valor Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>