force-app/main/default/objects/Account/fields/TotalOtherCharges__c.field-meta.xml
<CustomField>
    <fullName>TotalOtherCharges__c</fullName>
    <description>Outros valores da fatura como Impostos, Juros, Descontos e/ou Multas</description>
    <label>Outros Valores</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>