force-app/main/default/objects/Account/fields/TVAdditional__c.field-meta.xml
<CustomField>
    <fullName>TVAdditional__c</fullName>
    <description>Valor de Ponto Adicional do ativo/produto de TV utilizado no componente customizado de ofertas</description>
    <label>TV Ponto adicional</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>