force-app/main/default/objects/Account/fields/TVAmount__c.field-meta.xml
<CustomField>
    <fullName>TVAmount__c</fullName>
    <label>Total TV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>