force-app/main/default/objects/Account/fields/TVBundlePackage__c.field-meta.xml
<CustomField>
    <fullName>TVBundlePackage__c</fullName>
    <label>Pacote Adicional</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>