force-app/main/default/objects/Account/fields/TVOthers__c.field-meta.xml
<CustomField>
    <fullName>TVOthers__c</fullName>
    <description>Valor de Outros do ativo/produto de TV utilizado no componente customizado de ofertas</description>
    <label>Outros</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>