force-app/main/default/objects/Account/fields/TVVDO__c.field-meta.xml
<CustomField>
    <fullName>TVVDO__c</fullName>
    <description>Valor de VDO/Avulso do ativo/produto de TV utilizado no componente customizado de ofertas</description>
    <label>VDO/Avulso</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>