force-app/main/default/objects/Account/fields/UserId__c.field-meta.xml
<CustomField>
    <fullName>UserId__c</fullName>
    <description>Identificador do cliente na 4P.</description>
    <label>User Id</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>