force-app/main/default/objects/Account/fields/VivoNetId__c.field-meta.xml
<CustomField>
    <fullName>VivoNetId__c</fullName>
    <description>Id do cliente dentro do Vivo Net</description>
    <externalId>true</externalId>
    <label>ID Vivo Net</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>