force-app/main/default/objects/Account/fields/VivoNextContactId__c.field-meta.xml
<CustomField>
    <fullName>VivoNextContactId__c</fullName>
    <description>ID do registro de contact dentro do VivoNext</description>
    <externalId>true</externalId>
    <label>Vivo Next Contact Id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>