force-app/main/default/objects/Account/fields/VivoNextCustomerId__c.field-meta.xml
<CustomField>
    <fullName>VivoNextCustomerId__c</fullName>
    <description>ID do registro de customer dentro do VivoNext</description>
    <externalId>true</externalId>
    <label>Vivo Next Customer Id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>