force-app/main/default/objects/Account/fields/whatslly__Tuvis_Chat_Id__c.field-meta.xml
<CustomField>
    <fullName>whatslly__Tuvis_Chat_Id__c</fullName>
    <label>Tuvis Chat Id</label>
    <type>Phone</type>
</CustomField>