force-app/main/default/objects/Account/fields/whatslly__Whatslly_Person_Id__c.field-meta.xml
<CustomField>
    <fullName>whatslly__Whatslly_Person_Id__c</fullName>
    <description>Do not change this field. It&apos;s required for Whatslly Auto Sync!</description>
    <externalId>true</externalId>
    <inlineHelpText>Do not change this field. It&apos;s required for Whatslly Auto Sync!</inlineHelpText>
    <label>Tuvis Person Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>