force-app/main/default/objects/Account/fields/WhiteListCharacteristic__c.field-meta.xml
<CustomField>
    <fullName>WhiteListCharacteristic__c</fullName>
    <label>Score do Whitelist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>WhiteListCharacteristic</valueSetName>
    </valueSet>
</CustomField>