force-app/main/default/objects/Account/recordTypes/Generic.recordType-meta.xml
<RecordType>
    <fullName>Generic</fullName>
    <active>true</active>
    <description>Tipo de registro utilizado para contas genéricas que não possuem informações sobre o cliente. Essas contas são necessárias para processos como o de Habilitação Remota e devem ser enriquecidas ou deletadas eventualmente.</description>
    <label>Genérica</label>
</RecordType>