force-app/main/default/objects/Account/recordTypes/PartnerAccount.recordType-meta.xml
<RecordType>
    <fullName>PartnerAccount</fullName>
    <active>true</active>
    <!--<compactLayoutAssignment>AccountPartnerPage</compactLayoutAssignment>-->
    <description>Tipo de registro para conta de parceiro</description>
    <label>Conta Parceiro</label>
</RecordType>