force-app/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ApproverRequestCustomerCPF__c</columns>
    <columns>vlocity_cmt__Status__c</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>BillingNumber__c</columns>
    <columns>ShippingNumber__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todas as contas</label>
</ListView>