force-app/main/default/objects/Account/listViews/Contas_Tipo_Consumer.listView-meta.xml
<ListView>
    <fullName>Contas_Tipo_Consumer</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Contas Tipo Consumer</label>
</ListView>